tcw3/designer/tests/bad/const_watch.tcwdl
pub comp crate::Comp1 {
    const wm: tcw3_pal::Wm { pub set; }

    // `const` can't have a `watch` accessor
    const field: u32 { pub set; pub watch event(event1); }
    //~^ ERROR `watch` accessor is not allowed for `const`
    event event1();
}
